Fixed visual issue on the vote buttons on iOS devices

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -1,73 +1,76 @@
 .lunch-day__title {
     padding: 10px;
-    background-color: gold
+    background-color: gold;
 }
 
 .lunch-day-item {
     border-bottom: 1px solid #ccc;
     margin-bottom: 10px;
-    padding: 0 10px 10px
+    padding: 0 10px 10px;
 }
 
 .lunch-day-item__price {
     float: right;
-    padding-right: 5px
+    padding-right: 5px;
 }
 
 .lunch-day-item__feedback {
     display: block;
-    margin-top: 7px
+    margin-top: 7px;
 }
 
 .lunch-day-item__vote-wrap {
-    float: right
+    float: right;
 }
 
 .lunch-day-item__vote-button {
     font-size: 27px;
     background: 0 0;
     border: 0;
-    color: #999796
+    color: #999796;
+    padding-right: 5px;
+    padding-left: 0;
+    margin-left: 5px;
 }
 
 .lunch-day-item__vote-button[data-clicked='1'] {
-    color: #ff00ff
+    color: #ff00ff;
 }
 
 .lunch-day-item__vote-button:focus {
-    outline: 0
+    outline: 0;
 }
 
 .lunch-day-item__vote-count {
     font-size: 14px;
     position: relative;
     top: -5px;
-    color: #999796
+    color: #999796;
 }
 
 .lunch-day-item__vote-count[data-clicked='1'] {
-    color: #ff00ff
+    color: #ff00ff;
 }
 
 .lunch-feedback__title {
     padding: 10px;
-    background-color: gold
+    background-color: gold;
 }
 
 .lunch-feedback-form__question {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 300;
-    margin-bottom: 10px
+    margin-bottom: 10px;
 }
 
 .lunch-feedback-form__question-item {
     display: block;
-    font-weight: 700
+    font-weight: 700;
 }
 
 .lunch-feedback-form__input {
     display: block;
     width: 100%;
     margin-bottom: 10px;
-    padding: 5px
+    padding: 5px;
 }
